--- a/index.html
+++ b/index.html
@@ -995,7 +995,6 @@
 												</ul>
 											</nav>
 										</div>
-										<a class="btn btn-gradient btn-rounded font-weight-semibold px-4 ms-3" href="https://themeforest.net/checkout/from_item/4106987?license=regular&support=bundle_6month&ref=Okler" target="_blank">BUY PORTO NOW!</a>
 										<button class="btn header-btn-collapse-nav" data-bs-toggle="collapse" data-bs-target=".header-nav-main nav"><i class="fa fa-bars"></i></button>
 									</div>
 								</div>
@@ -1050,8 +1049,8 @@
 							<div class="col-lg-6 offset-lg-1 mb-5">
 								<div class="position-relative border-width-10 border-color-light clearfix border border-radius" data-remove-min-height style="min-height: 394px;">
 									<video id="presentation" class="float-start" width="100%" height="100%" muted playsinline loop preload="metadata" poster="video/presentation.jpg" data-auto-play="true">
-									  	<source src="video/01 - Intro (Medeni Adıyaman).mp4" type="video/webm">
-									  	<source src="video/01 - Intro (Medeni Adıyaman).mp4" type="video/mp4">
+									  	<source src="video/" type="video/webm">
+									  	<source src="video/" type="video/mp4">
 									</video>
 									<a href="#" class="position-absolute top-50pct left-50pct transform3dxy-n50 bg-light rounded-circle d-flex align-items-center justify-content-center text-decoration-none bg-color-hover-primary text-color-hover-light play-button-lg pulseAnim pulseAnimAnimated" data-trigger-play-video="#presentation" data-trigger-play-video-remove="yes">
 										<i class="fas fa-play text-5"></i>
