--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 												<ul class="nav nav-pills" id="mainNav">
 													<li class="dropdown">
 														<a class="dropdown-item dropdown-toggle" href="index.html">
-															Home
+															خانه
 														</a>
 														<ul class="dropdown-menu">
 															<li>
@@ -1087,13 +1087,13 @@
 						<div class="py-4 bg-light left-0 z-index-3 w-100" data-plugin-sticky data-plugin-options="{'minWidth': 991, 'padding': {'top': 70}}">
 							<div class="text-center appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="400" data-appear-animation-duration="750">
 								<ul class="nav nav-pills sort-source sort-source-style-3 justify-content-center mb-0" data-sort-id="portfolio" data-option-key="filter" data-plugin-options="{'layoutMode': 'fitRows', 'filter': '*', 'useHash': false}">
-									<li class="nav-item active" data-option-value="*"><a class="nav-link custom-nav-link active" href="#demos" data-hash data-hash-offset="0" data-hash-offset-lg="-200">Show All</a></li>
-									<li class="nav-item" data-option-value=".new"><a class="nav-link custom-nav-link" href="#demos" data-hash data-hash-offset="0" data-hash-offset-lg="-200">NEW</a></li>								
-									<li class="nav-item" data-option-value=".classic"><a class="nav-link custom-nav-link" href="#demos" data-hash data-hash-offset="0" data-hash-offset-lg="-200">Classic</a></li>
-									<li class="nav-item" data-option-value=".shop"><a class="nav-link custom-nav-link" href="#demos" data-hash data-hash-offset="0" data-hash-offset-lg="-200">Shop</a></li>
+									<li class="nav-item active" data-option-value="*"><a class="nav-link custom-nav-link active" href="#demos" data-hash data-hash-offset="0" data-hash-offset-lg="-200">همه</a></li>
+									<li class="nav-item" data-option-value=".new"><a class="nav-link custom-nav-link" href="#demos" data-hash data-hash-offset="0" data-hash-offset-lg="-200">جدید</a></li>								
+									<li class="nav-item" data-option-value=".classic"><a class="nav-link custom-nav-link" href="#demos" data-hash data-hash-offset="0" data-hash-offset-lg="-200">کلاسیک</a></li>
+									<li class="nav-item" data-option-value=".shop"><a class="nav-link custom-nav-link" href="#demos" data-hash data-hash-offset="0" data-hash-offset-lg="-200">فروشگاه</a></li>
 									<li class="nav-item" data-option-value=".onepage"><a class="nav-link custom-nav-link" href="#demos" data-hash data-hash-offset="0" data-hash-offset-lg="-200">One Page</a></li>
 									<li class="nav-item" data-option-value=".business"><a class="nav-link custom-nav-link" href="#demos" data-hash data-hash-offset="0" data-hash-offset-lg="-200">Business</a></li>
-									<li class="nav-item" data-option-value=".blog"><a class="nav-link custom-nav-link" href="#demos" data-hash data-hash-offset="0" data-hash-offset-lg="-200">Blog</a></li>
+									<li class="nav-item" data-option-value=".blog"><a class="nav-link custom-nav-link" href="#demos" data-hash data-hash-offset="0" data-hash-offset-lg="-200">بلاگ</a></li>
 									<li class="nav-item" data-option-value=".portfolio"><a class="nav-link custom-nav-link" href="#demos" data-hash data-hash-offset="0" data-hash-offset-lg="-200">Portfolio</a></li>
 								</ul>
 							</div>
