--- a/index.html
+++ b/index.html
@@ -2336,7 +2336,7 @@
 					</div>
 				</section>
 
-				<section class="section section-no-border section-angled section-dark pb-0 m-0" style="background-repeat: no-repeat; background-color: #0169fe !important;" data-src="img/landing/reason_bg.png">
+				<section class="section section-no-border section-angled section-dark pb-0 m-0" style="background-repeat: no-repeat; background-color: #CE8D99 !important;" data-src="img/landing/reason_bg.png">
 					<div class="section-angled-layer-top section-angled-layer-increase-angle bg-color-light-scale-1" style="padding: 4rem 0;"></div>
 					<div class="spacer py-md-4 my-md-5"></div>
 					<div class="container pt-5 mt-5">
@@ -2418,7 +2418,7 @@
 				</section>
 
 				<section class="section section-no-border section-angled bg-color-light-scale-1 m-0">
-					<div class="section-angled-layer-top section-angled-layer-increase-angle" style="padding: 5rem 0; background-color: #0169fe;"></div>
+					<div class="section-angled-layer-top section-angled-layer-increase-angle" style="padding: 5rem 0; background-color: #CE8D99;"></div>
 					<div class="container py-5 my-5">
 						<div class="row align-items-center text-center my-5">
 							<div class="col-md-6">
